--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@angular/platform-browser": "^20.0.4",
     "@angular/platform-browser-dynamic": "^20.0.4",
     "@angular/router": "^20.0.4",
+    "@ngrx/signals": "^20.0.1",
+    "@ngrx/store-devtools": "^20.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
